# Synthoven

./: .gitignore  CONTEXT.md  HANDOFF.md  handoff.md  implementation_plan.md.resolved  index.html  package.json  vite.config.js
backend/: .gitignore  pom.xml
backend/src/main/java/com/chopaudio/: ChopApplication.java
backend/src/main/java/com/chopaudio/common/exception/: GlobalExceptionHandler.java  ResourceNotFoundException.java
backend/src/main/java/com/chopaudio/common/response/: ApiResponse.java
backend/src/main/java/com/chopaudio/config/: AsyncConfig.java  CorsConfig.java  StartupRunner.java  WebClientConfig.java
backend/src/main/java/com/chopaudio/generation/client/: LocalStableAudioClient.java  MockGenerationClient.java  StableAudioClient.java  SunoClient.java
backend/src/main/java/com/chopaudio/generation/controller/: GenerationController.java
backend/src/main/java/com/chopaudio/generation/dto/: GenerationJobDto.java  GenerationRequest.java
backend/src/main/java/com/chopaudio/generation/service/: GeneratedFileStore.java  GenerationService.java
backend/src/main/java/com/chopaudio/player/controller/: PlayerController.java
backend/src/main/java/com/chopaudio/search/controller/: SearchController.java
backend/src/main/java/com/chopaudio/search/dto/: SearchRequest.java  SearchResponse.java
backend/src/main/java/com/chopaudio/search/service/: SearchService.java
backend/src/main/resources/: application.properties
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/layout/: FolderTree.jsx  TopBar.jsx
frontend/src/components/player/: PlayerBar.jsx
frontend/src/components/results/: SampleRow.jsx
frontend/src/components/ui/: Pagination.jsx  Tag.jsx  Waveform.jsx
frontend/src/data/: samples.js
frontend/src/hooks/: usePlayer.js  useSearch.js
frontend/src/styles/: global.css
plugin/: .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat
plugin/Source/: AudioInputDropTarget.h  BpeTokenizer.cpp  BpeTokenizer.h  ChopApiClient.cpp  ChopApiClient.h  ClapModelManager.cpp  ClapModelManager.h  MelSpectrogramExtractor.cpp  MelSpectrogramExtractor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sample.h  SampleListBox.cpp  SampleListBox.h  WaveformPreviewComponent.h
plugin/Source/Bridge/: JSBridge.cpp  JSBridge.h
src/: App.jsx
src/api/: client.js  mapper.js
src/bridge/: index.js
src/components/layout/: Sidebar.jsx  TopBar.jsx
src/components/results/: ResultsPanel.jsx  SampleRow.jsx
src/components/search/: SearchBar.jsx
src/hooks/: usePlayer.js  useSearch.js
src/styles/: tokens.css
